Now handles timeout on Wordpress site on homepage. Also fixed wrapping of long url in dataset page.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -512,7 +512,7 @@ td.datasetCount
 
 .datasetShow
 	{
-		border:1px solid red;
+	
 	}
 
 
@@ -525,6 +525,10 @@ article#datasetShow b
 #dataset .url
 	{
 		word-wrap: break-word;
+		width:380px;
+		display:block;
+		float:left;
+		margin-bottom:10px;
 	}
 	
 /***** Content ends *****/	
